2010-02-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: change the function "activateAjaxRefresh" for
	refresh also the agent maps, and in the function "getAgentMap" show icon
	with status the agent maps.
	* operation/gis_maps/ajax.php: in the switch option "get_new_positions"
	return GIS data for agent maps, in the "point_agent_info" and
	"point_path_info" option change for new tables.
	* operation/agentes/gis_view.php: add the ajax moving agent and click
	bubble info.

2010-02-22  Sancho Lerena <slerena@artica.es>

	* include/functions_menu.php: Add calls for new enterprise ACL system.

	* include/config_process.php
	include/functions_config.php: Added new setup token for ACL enterprise.

	* index.php: Implemented new Enterprise ACL on page load.

	* extras/pandora_diag.php: Added new header style.

	* general/noaccess.php: Ending <div> was breaking layout. Fixed.

	* godmode/db/db_main.php: Added new header style.

	* godmode/menu.php: Added new Setup option for Enterprise ACL system.

	* godmode/snmpconsole/snmp_alert.php,
	godmode/setup/news.php
	godmode/users/configure_user.php
	godmode/reporting/map_builder.php: Added new header style.

	* godmode/setup/setup.php: Added new Setup option for Enterprise ACL system.

	* godmode/setup/setup_visuals.php: Added new header style.

2010-02-22  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/gis_maps/ajax.php: fix bug that pass wrong var to search
	status in function "get_agent_status".

2010-02-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_alerts.php: fix when try delete only the alerts from
	alert policies form. 

2010-02-22  Miguel de Dios  <miguel.dedios@artica.es>

	* images/groups_small/*.ok.png, images/groups_small/*.default.png,
	images/groups_small/*.bad.png, images/groups_small/*.warning.png: add the
	group images for diferent status, it's used in the GIS map.
	
	* godmode/agentes/agent_manager.php: change for new form to name the icons